@@ -131,8 +131,8 @@ int BSP_vme2local_adrs(unsigned am, unsigned long vmeaddr, unsigned long *plocal
  *  So we prototype it and define the constant confdefs.h expects
  *  to configure a BSP specific one.
  */
-void *_BSP_Thread_Idle_body( uintptr_t ignored );
-#define BSP_IDLE_TASK_BODY _BSP_Thread_Idle_body
+void *bsp_idle_thread( uintptr_t ignored );
+#define BSP_IDLE_TASK_BODY bsp_idle_thread
 
 #ifdef __cplusplus
 }
